--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="st.css"/>
+<link rel="stylesheet" href="index.css"/>
 
 </head>
-
-<body>
-  !DOCTYPE html>
-<html>
-
-<head>
-
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="st.css"/>
-
-</head>
-
-<body>
