This Commit adds nav bar lists

--- a/index.html
+++ b/index.html
@@ -8,3 +8,26 @@
 <link rel="stylesheet" href="index.css"/>
 
 </head>
+
+<body>
+       <section id="streetfood">
+
+<header>
+
+<section class="one">
+
+<div id="nav">
+
+<ul>
+  <li>Home</li>
+  <li>About</li>
+  <li>Our Menu</li>
+  <li>Happy Hour</li>
+  <li><b>Street Food</b></li>
+  <li>Catering<li>
+  <li>Reservation</li>
+  <li>Gallery</li>
+  <li>Contact</li>
+</ul>
+</header>
+</div>
