This commit adds the fast section about our street food website with spans to style the heading

--- a/index.html
+++ b/index.html
@@ -31,3 +31,25 @@
 </ul>
 </header>
 </div>
+
+<section id="street">
+       <h1 id="streeth1">
+              <div id="dont">
+              <Span id="street1">Street</span>
+              <span id="food">Food</span>
+       </h1>
+
+<div id="dont">
+ <h2 id="streeth2">we don't play with food</h2>
+ <p> When I was a small boy, my father told me<br> never to recomend a church or a woman<br> to anyone. And I have
+   found it wise never to<br> recomend a restaurant either.Something<br> always goes wrong with the cheese souffle
+ </p>
+
+</div>
+
+<button id="button" type="submit">Order Now
+</button>
+
+</section>
+
+</section>
