This commit has html card for styling the second section

--- a/index.html
+++ b/index.html
@@ -53,3 +53,58 @@
 </section>
 
 </section>
+
+<section id="together">
+
+    <h1><span id="eat">Eat together</span></h1>
+    <p>There is something profoundly satisfying<br> about sharing a meal. Eating together,<br>breaking bread together,
+       is one of the<br> oldest and most fundamentally unifying of<br> human experiences.</p>
+
+       <img id="eating" src="/home/moringa/Downloads/Streetfood website/eating_together.png">
+    </section>
+
+<section class="two">
+
+<div id="exploremenu">
+
+
+       <h3>Explore<span id="menu"> Menu</span>
+
+<setion id="card">
+              <div class ="card">
+       <h4>Burger Name</h4>
+       <p>There is something profoundly satisfying sharing a meal<p>
+              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
+              </div>
+
+              <div class="card">
+       <h4>Burger Name</h4>
+       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p>
+              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
+              </div>
+
+              <div class="card">
+       <h4>Burger Name</h4>
+       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p>
+              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
+              </div>
+
+              <div class="card">
+       <h4>Burger Name</h4>
+       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p></p>
+              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
+              </div>
+
+              <div class="card">
+       <h4>Burger Name</h4>
+       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p></p>
+              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
+              </div>
+
+              <div class="card">
+       <h4>Burger Name</h4>
+       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p>
+              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
+       </div>
+</setion>
+</div>
