This commit adds tags for section two and it also includes the footer and contact informations

--- a/index.html
+++ b/index.html
@@ -108,3 +108,47 @@
        </div>
 </setion>
 </div>
+
+<div id="hotdeals"><h2>Hot<span>Deals</span></h2>
+
+       <h1 id="menu">Speacial Combo Pack</h1>
+       <h2>Burger Pizz</h2>
+       <h2>Fries & Drinks<h2>
+              <img src="/home/moringa/Downloads/Streetfood website/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png">
+</div>
+</section>
+
+<div id="contactus">
+       <h2>Contact<span id="us"> Us</span></h2>
+
+       <p>There is something profoundly satisfying<br> about sharing a meal. Eating together,<br> breaking bread together, is one
+          of the<br> oldest and most fundamentally unifying of<br> human experiences.</p>
+       <input type="email" name="email" id="email"  placeholder="Email">
+       <button id="button" type="submit">Send</button>
+       </div>
+
+<footer>
+
+<div id="date">
+    <p>Sunday-Thursday</p>
+    <p>4:00pm</p>
+    <p>Friday-Saturday</p>
+    <p>4:00-10pm</p>
+</div>
+
+<div id="tel">
+    <p><b>(423)266-1121</b></h3>
+    <p>801 Chestnut Street | Chattanooga TN 37402
+</div>
+
+<div id="social">
+    <h3>Follow</h3>
+    <P>GET THE LATEST NEWS SIGN UP FOR OUR NEWSLETTERS</P>
+    <P>@website Design</p>
+    <img id="logo">
+    <button id="button" type="submit">Send</button>
+</div>
+
+</section>
+</body>
+</html>
