This commit adds the menu list items

--- a/index.html
+++ b/index.html
@@ -61,55 +61,72 @@
        is one of the<br> oldest and most fundamentally unifying of<br> human experiences.</p>
 
        <img id="eating" src="/home/moringa/Downloads/Streetfood website/eating_together.png">
-    </section>
+</section>
+
+<!-- cards section  -->
+<section class="cards">
+       <div class="card-menu">
+              <h2>explore menu</h2>
+              <div class="menu-list-item">
+                     <div class="menu-items">
+                            <h4>humberger</h4>
+                            <div class="humb-descr">
+                                   <img src="./images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus.</p>
+                            </div>
+                      </div> 
+                      <!-- end -item -1  -->
+                      <div class="menu-items">
+                             <h4>humberger</h4>
+                             <div class="humb-descr">
+                                    <img src="./images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus.</p>
+                             </div>
+                       </div> 
+                       <!-- end -item -1  -->
+                       <div class="menu-items">
+                             <h4>humberger</h4>
+                             <div class="humb-descr">
+                                    <img src="./images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus.</p>
+                             </div>
+                       </div> 
+                       <!-- end -item -1  -->
+              </div>
+
+              <!-- end menu list item  -->
+              <div class="menu-list-item">
+                     <div class="menu-items">
+                            <h4>humberger</h4>
+                            <div class="humb-descr">
+                                   <img src="./images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus.</p>
+                            </div>
+                      </div> 
+                      <!-- end -item -1  -->
+                      <div class="menu-items">
+                             <h4>humberger</h4>
+                             <div class="humb-descr">
+                                    <img src="./images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus.</p>
+                             </div>
+                       </div> 
+                       <!-- end -item -1  -->
+                       <div class="menu-items">
+                             <h4>humberger</h4>
+                             <div class="humb-descr">
+                                    <img src="./images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus.</p>
+                             </div>
+                       </div> 
+                       <!-- end -item -1  -->
+              </div>
+              
+       </div>
+</section>
 
 <section class="two">
-
-<div id="exploremenu">
-
-
-       <h3>Explore<span id="menu"> Menu</span>
-
-<setion id="card">
-              <div class ="card">
-       <h4>Burger Name</h4>
-       <p>There is something profoundly satisfying sharing a meal<p>
-              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
-              </div>
-
-              <div class="card">
-       <h4>Burger Name</h4>
-       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p>
-              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
-              </div>
-
-              <div class="card">
-       <h4>Burger Name</h4>
-       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p>
-              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
-              </div>
-
-              <div class="card">
-       <h4>Burger Name</h4>
-       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p></p>
-              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
-              </div>
-
-              <div class="card">
-       <h4>Burger Name</h4>
-       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p></p>
-              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
-              </div>
-
-              <div class="card">
-       <h4>Burger Name</h4>
-       <p>There is something<br> profoundly<br> satisfying<br> about sharing a meal<p>
-              <img id="img-menu" src="/home/moringa/Downloads/Streetfood website/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png">
-       </div>
-</setion>
-</div>
-
-<div id="hotdeals"><h2>Hot<span>Deals</span></h2>
+       <div id="hotdeals"><h2>Hot<span>Deals</span></h2>
 
        <h1 id="menu">Speacial Combo Pack</h1>
        <h2>Burger Pizz</h2>
