this commit adds tags to id section together

--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
 </section>
 
 </section>
-
+   
 <section id="together">
-
-    <h1><span id="eat">Eat together</span></h1>
-    <p>There is something profoundly satisfying<br> about sharing a meal. Eating together,<br>breaking bread together,
-       is one of the<br> oldest and most fundamentally unifying of<br> human experiences.</p>
-
-       <img id="eating" src="/home/moringa/Downloads/Streetfood website/eating_together.png">
+       <img id="eating" src="./images/eating_together.png">
+   <div id="tog">
+       <h1><span id="eat">Eat together</span></h1>
+       <p>There is something profoundly satisfying<br> about sharing a meal. Eating together,<br>breaking bread together,
+          is one of the<br> oldest and most fundamentally unifying of<br> human experiences.
+       </p>
+   </div>
 </section>
 
 <!-- cards section  -->
