Adds html section tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="index.css"/>
 
 </head>
@@ -126,14 +127,20 @@
        </div>
 </section>
 
-<section class="two">
-       <div id="hotdeals"><h2>Hot<span>Deals</span></h2>
+<section id="two">
+       <h2>Hot<span id="deals"> Deals</span></h2>
 
+       <img id="hotdeals" src="./images/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png">
+       <img src="./images/likemeat-73_obA0IB_0-unsplash-removebg-preview.png">
+
+ <div id="combopack">
        <h1 id="menu">Speacial Combo Pack</h1>
-       <h2>Burger Pizz</h2>
-       <h2>Fries & Drinks<h2>
-              <img src="/home/moringa/Downloads/Streetfood website/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png">
-</div>
+       <h2>Burger Pizz<br>
+              Fries & Drinks</h2>
+              <p>There is something profoundly satisfying<br> about sharing a meal. Eating together,<br>breaking bread together,
+                     is one of the<br> oldest and most fundamentally unifying of<br> human experiences.</p>
+ </div>      
+              
 </section>
 
 <div id="contactus">
@@ -156,16 +163,21 @@
 
 <div id="tel">
     <p><b>(423)266-1121</b></h3>
-    <p>801 Chestnut Street | Chattanooga TN 37402
+    <p>801 Chestnut Street |<br> Chattanooga TN 37402
 </div>
 
 <div id="social">
     <h3>Follow</h3>
-    <P>GET THE LATEST NEWS SIGN UP FOR OUR NEWSLETTERS</P>
+    <P>GET THE LATEST NEWS SIGN UP<br> FOR OUR NEWSLETTERS</P>
     <P>@website Design</p>
-    <img id="logo">
+</div>
+
+<div id="logobutton">
+ <i class="fa fa-instagram" style="font-size:36px"></i>
     <button id="button" type="submit">Send</button>
 </div>
+
+</footer>
 
 </section>
 </body>
